Update Errors, Starting AWS

--- a/pickle_dl.ipynb
+++ b/pickle_dl.ipynb
@@ -162,7 +162,7 @@
     "blur_model = MobileNetClassifier()\n",
     "\n",
     "# mobilenet_centered_softblurred_scene_laplacian\n",
-    "model_path = './mobilenet_blurred.pth'\n",
+    "model_path = 'blurred_0620.pth'\n",
     "\n",
     "# Load the saved blur_model state_dict\n",
     "blur_model.load_state_dict(torch.load(model_path))\n",
@@ -333,7 +333,7 @@
     "\n",
     "# Example usage:\n",
     "folder_path = r'C:\\Users\\ben81\\GitHub\\Pickle-DL'  # Replace with the actual folder path\n",
-    "model_path = 'effnet_b3.pth'  \n",
+    "model_path = 'eyeclosing_0622.pth'  \n",
     "\n",
     "# Load all images from the folder\n",
     "images = load_images_from_folder(folder_path)\n",
