Update eye models

--- a/pickle_dl.ipynb
+++ b/pickle_dl.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# 예시 폴더 경로\n",
-    "folder_path = r\"\"\n",
+    "folder_path = r\"C:\\Users\\ben81\\zflip_random2\"\n",
     "\n",
     "# EfficientNet 모델 로드 및 임베딩 벡터 추출 레이어 설정\n",
     "base_model = models.efficientnet_b0(pretrained=True)\n",
@@ -162,7 +162,7 @@
     "blur_model = MobileNetClassifier()\n",
     "\n",
     "# mobilenet_centered_softblurred_scene_laplacian\n",
-    "model_path = 'blurred_0620.pth'\n",
+    "model_path = r\"C:\\Users\\ben81\\GitHub\\pickle_archive\\blur\\models\\mobilenet_centered_softblurred_scene_laplacian.pth\"\n",
     "\n",
     "# Load the saved blur_model state_dict\n",
     "blur_model.load_state_dict(torch.load(model_path))\n",
@@ -207,7 +207,7 @@
     "        return None\n",
     "\n",
     "\n",
-    "path = r\"C:\\Users\\ben81\\zflip_camera\"\n",
+    "path = r\"C:\\Users\\ben81\\GitHub\\Pickle-DL\\picklework\\eyeclosing\\zflip_camera\"\n",
     "blurred_files = []\n",
     "\n",
     "for i in os.listdir(path):\n",
@@ -215,12 +215,35 @@
     "        image_path = os.path.join(path, i)\n",
     "        try:\n",
     "            blurred_path = predict_blur(blur_model, image_path)\n",
-    "            if blurred_path not None:\n",
+    "            if blurred_path is not None:\n",
     "                blurred_files.append(blurred_path)\n",
     "        except:\n",
     "            print('error')\n",
     "\n",
-    "print(blurred_files)\n"
+    "# print(blurred_files)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for image_path in blurred_files:\n",
+    "    image = cv2.imread(image_path)\n",
+    "    if image is None:\n",
+    "        print(f\"{image_path}을(를) 로드하는 데 실패했습니다.\")\n",
+    "        continue\n",
+    "\n",
+    "    # BGR 이미지를 RGB로 변환\n",
+    "    image_rgb = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "    # 이미지 표시\n",
+    "    plt.figure(figsize=(6, 6))\n",
+    "    plt.imshow(image_rgb)\n",
+    "    plt.title(image_path)\n",
+    "    plt.axis('off')  # 축 숫자와 눈금 끄기\n",
+    "    plt.show()"
    ]
   },
   {
@@ -236,33 +259,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "device"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import cv2\n",
+    "from torchvision import transforms\n",
+    "from PIL import Image\n",
+    "import os\n",
+    "from efficientnet_pytorch import EfficientNet\n",
+    "\n",
     "class EyeStateDetector:\n",
     "    def __init__(self, images, model_path):\n",
-    "        self.images = {}\n",
+    "        self.images = images\n",
+    "        self.device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "        self.yolo_model = self.load_yolo_model()\n",
     "        self.efficientnet_model = self.load_efficientnet_model(model_path)\n",
-    "        self.device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "        self.class_names = ['ClosedFace', 'OpenFace']\n",
     "\n",
     "    def load_yolo_model(self):\n",
-    "        model = get_model(\"yolov5n\", device=\"cuda\" if torch.cuda.is_available() else \"cpu\", min_face=24)\n",
+    "        model = get_model(\"yolov5n\", device=self.device, min_face=24)\n",
     "        return model\n",
     "\n",
     "    def load_efficientnet_model(self, model_path):\n",
     "        net = EfficientNet.from_pretrained('efficientnet-b3')\n",
     "        num_features = net._fc.in_features\n",
     "        net._fc = nn.Linear(num_features, 2)\n",
-    "        net.load_state_dict(torch.load(model_path))\n",
+    "        net.load_state_dict(torch.load(model_path, map_location=self.device))\n",
     "        net = net.to(self.device)\n",
     "        net.eval()\n",
     "\n",
@@ -271,9 +292,9 @@
     "    def preprocess_image(self, image):\n",
     "        preprocess = transforms.Compose([\n",
     "            transforms.Resize(256),\n",
-    "            transforms.CenterCrop(224),\n",
+    "            transforms.CenterCrop(256),\n",
     "            transforms.ToTensor(),\n",
-    "            transforms.Normalize(0.5, 0.5)\n",
+    "            transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
     "        ])\n",
     "        image = Image.fromarray(cv2.cvtColor(image, cv2.COLOR_BGR2RGB)).convert('RGB')\n",
     "        image = preprocess(image)\n",
@@ -300,7 +321,7 @@
     "\n",
     "        return self.class_names[preds.item()]\n",
     "\n",
-    "    def predict(self, image):\n",
+    "    def predict(self):\n",
     "        results = {}\n",
     "\n",
     "        for image_name, image in self.images.items():\n",
@@ -311,7 +332,6 @@
     "\n",
     "            eye_state = False\n",
     "            for face in faces:\n",
-    "                # 눈 검출 및 상태 예측\n",
     "                eye_state = self.eye_detection(face)\n",
     "                if eye_state == 'ClosedFace':\n",
     "                    eye_state = True\n",
@@ -320,6 +340,7 @@
     "            results[image_name] = eye_state\n",
     "\n",
     "        return results\n",
+    "\n",
     "# Function to load all images from a folder\n",
     "def load_images_from_folder(folder_path):\n",
     "    images = {}\n",
@@ -332,8 +353,8 @@
     "    return images\n",
     "\n",
     "# Example usage:\n",
-    "folder_path = r'C:\\Users\\ben81\\GitHub\\Pickle-DL'  # Replace with the actual folder path\n",
-    "model_path = 'eyeclosing_0622.pth'  \n",
+    "folder_path = r'C:\\Users\\ben81\\zflip_random2'  # Replace with the actual folder path\n",
+    "model_path = r'C:\\Users\\ben81\\zflip_random1'\n",
     "\n",
     "# Load all images from the folder\n",
     "images = load_images_from_folder(folder_path)\n",
@@ -344,6 +365,323 @@
     "# Predict eye states\n",
     "results = detector.predict()\n",
     "print(results)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. 지헌 Eye closing 모델"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import filterfalse\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import cv2\n",
+    "from torchvision import transforms, models\n",
+    "from PIL import Image\n",
+    "import os\n",
+    "from ultralytics import YOLO\n",
+    "\n",
+    "import logging\n",
+    "logging.basicConfig(level=logging.WARNING)\n",
+    "\n",
+    "\n",
+    "class EyeStateDetector:\n",
+    "    def __init__(self, images, model_path):\n",
+    "        self.images = images\n",
+    "        self.device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "        self.yolo_model = self.load_yolo_model()\n",
+    "        self.efficientnet_model = self.load_efficientnet_model(model_path)\n",
+    "        self.class_names = ['ClosedFace', 'OpenFace']\n",
+    "\n",
+    "    def load_yolo_model(self):\n",
+    "        model = YOLO(\"picklework/eyeclosing/yolov8n-face.pt\")  # 모델 파일 경로 수정\n",
+    "        return model\n",
+    "\n",
+    "    def load_efficientnet_model(self, model_path):\n",
+    "        net = models.efficientnet_b0(pretrained=True)\n",
+    "        in_features = net.classifier[1].in_features\n",
+    "        net.classifier[1] = nn.Linear(in_features, 2)\n",
+    "        net.load_state_dict(torch.load(model_path))\n",
+    "\n",
+    "        net.to(self.device)\n",
+    "        net.eval()\n",
+    "        return net\n",
+    "\n",
+    "    def preprocess_image(self, image):\n",
+    "        preprocess = transforms.Compose([\n",
+    "            transforms.Resize(256),\n",
+    "            transforms.CenterCrop(256),\n",
+    "            transforms.ToTensor(),\n",
+    "            transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
+    "        ])\n",
+    "        image = Image.fromarray(cv2.cvtColor(image, cv2.COLOR_BGR2RGB)).convert('RGB')\n",
+    "        image = preprocess(image)\n",
+    "        image = image.unsqueeze(0)\n",
+    "        return image\n",
+    "\n",
+    "    def face_detection(self, image):\n",
+    "        rgb_image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "        results = self.yolo_model.predict(source=rgb_image, conf=0.6, max_det=15, verbose=False)\n",
+    "\n",
+    "        faces = []\n",
+    "        for result in results:\n",
+    "            for bbox in result.boxes.xyxy:\n",
+    "                x1, y1, x2, y2 = map(int, bbox)\n",
+    "                face_width, face_height = x2 - x1, y2 - y1\n",
+    "\n",
+    "                # 최소 얼굴 크기 필터링\n",
+    "                if face_width >= 200 and face_height >= 200:\n",
+    "                    face_image = image[y1:y2, x1:x2]\n",
+    "                    faces.append(face_image)\n",
+    "        return faces\n",
+    "\n",
+    "    def eye_detection(self, face_image):\n",
+    "        image = self.preprocess_image(face_image).to(self.device)\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            outputs = self.efficientnet_model(image)\n",
+    "            _, preds = torch.max(outputs, 1)\n",
+    "\n",
+    "        return self.class_names[preds.item()]\n",
+    "\n",
+    "    def predict(self):\n",
+    "        results = {}\n",
+    "\n",
+    "        for image_name, image in self.images.items():\n",
+    "            faces = self.face_detection(image)\n",
+    "            if not faces:\n",
+    "                results[image_name] = False\n",
+    "                continue\n",
+    "\n",
+    "            eye_state = False\n",
+    "            for face in faces:\n",
+    "                eye_state = self.eye_detection(face)\n",
+    "                if eye_state == 'ClosedFace':\n",
+    "                    eye_state = True\n",
+    "                    break\n",
+    "\n",
+    "            results[image_name] = eye_state\n",
+    "\n",
+    "        return results\n",
+    "\n",
+    "# Function to load all images from a folder\n",
+    "def load_images_from_folder(folder_path):\n",
+    "    images = {}\n",
+    "    for filename in os.listdir(folder_path):\n",
+    "        if filename.endswith(('.jpg', '.jpeg', '.png')):\n",
+    "            image_path = os.path.join(folder_path, filename)\n",
+    "            image = cv2.imread(image_path)\n",
+    "            if image is not None:\n",
+    "                images[filename] = image\n",
+    "    return images\n",
+    "\n",
+    "# Example usage:\n",
+    "folder_path = r\"C:\\Users\\ben81\\GitHub\\Pickle-DL\\picklework\\eyeclosing\\zflip_camera\"  # Replace with the actual folder path\n",
+    "model_path = r\"C:\\Users\\ben81\\GitHub\\Pickle-DL\\picklework\\eyeclosing\\models\\b0_3rd_rgbfinal_model.pth\"\n",
+    "\n",
+    "# Load all images from the folder\n",
+    "images = load_images_from_folder(folder_path)\n",
+    "\n",
+    "# Initialize the EyeStateDetector\n",
+    "detector = EyeStateDetector(images, model_path)\n",
+    "\n",
+    "# Predict eye states\n",
+    "results = detector.predict()\n",
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "\n",
+    "for filename, result in results.items():\n",
+    "    file_path = os.path.join(folder_path, filename)\n",
+    "    \n",
+    "    if os.path.exists(file_path):\n",
+    "        # 이미지 읽기\n",
+    "        img = mpimg.imread(file_path)\n",
+    "        \n",
+    "        # 이미지 표시\n",
+    "        if result == True:\n",
+    "            plt.imshow(img)\n",
+    "            plt.title(f'{filename}: {result}')\n",
+    "            plt.axis('off')  # 축 숨기기\n",
+    "            plt.show()\n",
+    "    else:\n",
+    "        print(f'파일을 찾을 수 없습니다: {file_path}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. 흑백모델"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import cv2\n",
+    "from torchvision import transforms, models\n",
+    "from PIL import Image\n",
+    "import os\n",
+    "from ultralytics import YOLO\n",
+    "\n",
+    "import logging\n",
+    "logging.basicConfig(level=logging.WARNING)\n",
+    "\n",
+    "\n",
+    "class EyeStateDetector:\n",
+    "    def __init__(self, images, model_path):\n",
+    "        self.images = images\n",
+    "        self.device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "        self.yolo_model = self.load_yolo_model()\n",
+    "        self.efficientnet_model = self.load_efficientnet_model(model_path)\n",
+    "        self.class_names = ['ClosedFace', 'OpenFace']\n",
+    "\n",
+    "    def load_yolo_model(self):\n",
+    "        model = YOLO(\"picklework/eyeclosing/yolov8n-face.pt\")  # 모델 파일 경로 수정\n",
+    "        return model\n",
+    "\n",
+    "    def load_efficientnet_model(self, model_path):\n",
+    "        weights = models.EfficientNet_B0_Weights.DEFAULT\n",
+    "        net = models.efficientnet_b0(weights=weights)\n",
+    "        net.features[0][0] = nn.Conv2d(1, net.features[0][0].out_channels, kernel_size=3, stride=2, padding=1, bias=False)\n",
+    "        in_features = net.classifier[1].in_features\n",
+    "        net.classifier[1] = nn.Linear(in_features, 2)\n",
+    "        net.load_state_dict(torch.load(model_path, map_location=self.device))\n",
+    "\n",
+    "        net.to(self.device)\n",
+    "        net.eval()\n",
+    "        return net\n",
+    "\n",
+    "    def preprocess_image(self, image):\n",
+    "        preprocess = transforms.Compose([\n",
+    "            transforms.Resize(256),\n",
+    "            transforms.CenterCrop(256),\n",
+    "            transforms.ToTensor(),\n",
+    "            transforms.Normalize(mean=[0.5], std=[0.5])  # 흑백 이미지 정규화\n",
+    "        ])\n",
+    "        image = Image.fromarray(cv2.cvtColor(image, cv2.COLOR_BGR2GRAY))  # 이미지를 흑백으로 변환\n",
+    "        image = preprocess(image)\n",
+    "        image = image.unsqueeze(0)\n",
+    "        return image\n",
+    "\n",
+    "    def face_detection(self, image):\n",
+    "        rgb_image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "        results = self.yolo_model.predict(source=rgb_image, conf=0.65, max_det=15, verbose=False)\n",
+    "\n",
+    "        faces = []\n",
+    "        for result in results:\n",
+    "            for bbox in result.boxes.xyxy:\n",
+    "                x1, y1, x2, y2 = map(int, bbox)\n",
+    "                face_width, face_height = x2 - x1, y2 - y1\n",
+    "\n",
+    "                # 최소 얼굴 크기 필터링\n",
+    "                if face_width >= 200 and face_height >= 200:\n",
+    "                    face_image = image[y1:y2, x1:x2]\n",
+    "                    faces.append(face_image)\n",
+    "        return faces\n",
+    "\n",
+    "    def eye_detection(self, face_image):\n",
+    "        image = self.preprocess_image(face_image).to(self.device)\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            outputs = self.efficientnet_model(image)\n",
+    "            _, preds = torch.max(outputs, 1)\n",
+    "\n",
+    "        return self.class_names[preds.item()]\n",
+    "\n",
+    "    def predict(self):\n",
+    "        results = {}\n",
+    "\n",
+    "        for image_name, image in self.images.items():\n",
+    "            faces = self.face_detection(image)\n",
+    "            if not faces:\n",
+    "                results[image_name] = False\n",
+    "                continue\n",
+    "\n",
+    "            eye_state = False\n",
+    "            for face in faces:\n",
+    "                eye_state = self.eye_detection(face)\n",
+    "                if eye_state == 'ClosedFace':\n",
+    "                    eye_state = True\n",
+    "                    break\n",
+    "\n",
+    "            results[image_name] = eye_state\n",
+    "\n",
+    "        return results\n",
+    "\n",
+    "# Function to load all images from a folder\n",
+    "def load_images_from_folder(folder_path):\n",
+    "    images = {}\n",
+    "    for filename in os.listdir(folder_path):\n",
+    "        if filename.endswith(('.jpg', '.jpeg', '.png')):\n",
+    "            image_path = os.path.join(folder_path, filename)\n",
+    "            image = cv2.imread(image_path)\n",
+    "            if image is not None:\n",
+    "                images[filename] = image\n",
+    "    return images\n",
+    "\n",
+    "# Example usage:\n",
+    "folder_path = r\"C:\\Users\\ben81\\GitHub\\Pickle-DL\\picklework\\eyeclosing\\zflip_camera\"  # Replace with the actual folder path\n",
+    "model_path = r\"C:\\Users\\ben81\\GitHub\\Pickle-DL\\picklework\\eyeclosing\\models\\b0_3rd_gray.pth\"\n",
+    "\n",
+    "# Load all images from the folder\n",
+    "images = load_images_from_folder(folder_path)\n",
+    "\n",
+    "# Initialize the EyeStateDetector\n",
+    "detector = EyeStateDetector(images, model_path)\n",
+    "\n",
+    "# Predict eye states\n",
+    "results = detector.predict()\n",
+    "print(results)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "\n",
+    "for filename, result in results.items():\n",
+    "    file_path = os.path.join(folder_path, filename)\n",
+    "    \n",
+    "    if os.path.exists(file_path):\n",
+    "        # 이미지 읽기\n",
+    "        img = mpimg.imread(file_path)\n",
+    "        \n",
+    "        # 이미지 표시\n",
+    "        if result == True:\n",
+    "            plt.imshow(img)\n",
+    "            plt.title(f'{filename}: {result}')\n",
+    "            plt.axis('off')  # 축 숨기기\n",
+    "            plt.show()\n",
+    "    else:\n",
+    "        print(f'파일을 찾을 수 없습니다: {file_path}')"
    ]
   },
   {
@@ -370,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
